--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="fonts/FuturaPTBold.otf">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
+
+<!--Выбрать программу-->
+
 <body>
     <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" 
     integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl"
@@ -18,27 +21,29 @@
             <div class="container">
                 <div class="main-menu">
                     <div class="logo">
-                        <img src="./img/logo.png" >
+                        <a href="../IceAceProject/index.html">
+                            <img src="./img/logo.png">
+                        </a>
                     </div>
                     <nav class="main-nav">
                         <ul class="main-list">
                             <li class="main-items">
-                                <a class="main-link" href="#">Расписание</a>
+                                <a class="main-link" href="./index.html">Расписание</a>
                             </li>
                             <li class="main-items">
-                                <a class="main-link" href="#">Инструкторы</a>
+                                <a class="main-link" href="../IceAceProject2/index.html">Инструкторы</a>
                             </li>
                             <li class="main-items">
-                                <a class="main-link" href="#">Стоимость</a>
+                                <a class="main-link" href="./index.html">Стоимость</a>
                             </li>
                             <li class="main-items">
-                                <a class="main-link" href="#">Как добраться</a>
+                                <a class="main-link" href="../IceAceProject/index.html">Как добраться</a>
                             </li>
                         </ul>
                     </nav>
                     <div class="contacts">
                         <a href="tel:+78008008080" class="contacts-phone">8(800)800-80-80</a>
-                        <a href="#" class="btn">Записаться</a>
+                        <a href="../IceAceProject3/index.html" class="btn">Записаться</a>
                     </div>
                 </div>
             </div>
