--- a/index.html
+++ b/index.html
@@ -18,135 +18,146 @@
     crossorigin="anonymous"></script>
 
     <header>
-            <div class="container">
-                <div class="main-menu">
-                    <div class="logo">
-                        <a href="../IceAceProject/index.html">
-                            <img src="./img/logo.png">
-                        </a>
-                    </div>
-                    <nav class="main-nav">
-                        <ul class="main-list">
-                            <li class="main-items">
-                                <a class="main-link" href="./index.html">Расписание</a>
-                            </li>
-                            <li class="main-items">
-                                <a class="main-link" href="../IceAceProject2/index.html">Инструкторы</a>
-                            </li>
-                            <li class="main-items">
-                                <a class="main-link" href="./index.html">Стоимость</a>
-                            </li>
-                            <li class="main-items">
-                                <a class="main-link" href="../IceAceProject/index.html">Как добраться</a>
-                            </li>
-                        </ul>
-                    </nav>
-                    <div class="contacts">
-                        <a href="tel:+78008008080" class="contacts-phone">8(800)800-80-80</a>
-                        <a href="../IceAceProject3/index.html" class="btn">Записаться</a>
-                    </div>
+        <div class="container">
+            <div class="main-menu">
+                <div class="logo">
+                    <a href="../IceAceProject/index.html">
+                        <img src="./img/logo.png">
+                    </a>
+                </div>
+                <nav class="main-nav">
+                    <ul class="main-list">
+                        <li class="main-items">
+                            <a class="main-link" href="./index.html">Расписание</a>
+                        </li>
+                        <li class="main-items">
+                            <a class="main-link" href="../IceAceProject2/index.html">Инструкторы</a>
+                        </li>
+                        <li class="main-items">
+                            <a class="main-link" href="./index.html">Стоимость</a>
+                        </li>
+                        <li class="main-items">
+                            <a class="main-link" href="../IceAceProject/index.html">Как добраться</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="contacts">
+                    <a href="tel:+78008008080" class="contacts-phone">8(800)800-80-80</a>
+                    <a href="../IceAceProject3/index.html" class="btn">Записаться</a>
                 </div>
             </div>
-        </header>
+        </div>
+    </header>
 
-        <main>
-            <section>
-                <div class="container">
-                    <h1>Выбрать программу</h1>
-                    <table>
-                        <tr>
-                            <th>Спорт</th>
-                            <th>Инстрктор</th>
-                            <th>Дата</th>
-                            <th>Время</th>
-                            <th>Стоимость</th>
-                        </tr>
-                        <tr>
-                            <td>Сноуборд</td>
-                            <td>Константин Константинопольский</td>
-                            <td>30.03.2017</td>
-                            <td>12:00</td>
-                            <td>2000 руб.</td>
-                            <td><a href="#" class="td-btn">Записаться</a></td>
-                        </tr>
-                        <tr>
-                            <td>Сноуборд</td>
-                            <td>Константин Константинопольский</td>
-                            <td>01.04.2017</td>
-                            <td>12:00</td>
-                            <td>2000 руб.</td>
-                            <td><a href="#" class="td-btn">Записаться</a></td>
-                        </tr>
-                        <tr>
-                            <td>Лыжи</td>
-                            <td>Степан Александров</td>
-                            <td>01.04.2017</td>
-                            <td>13:00</td>
-                            <td>3000 руб.</td>
-                            <td><a href="#" class="td-btn">Записаться</a></td>
-                        </tr>
-                        <tr>
-                            <td>Лыжи</td>
-                            <td>Виталий Сергеев</td>
-                            <td>03.04.2017</td>
-                            <td>14:00</td>
-                            <td>4000 руб.</td>
-                            <td><a href="#" class="td-btn">Записаться</a></td>
-                        </tr>
-                        <tr>
-                            <td>Сноуборд</td>
-                            <td>Арсений Петров</td>
-                            <td>04.04.2017</td>
-                            <td>14:00</td>
-                            <td>4000 руб.</td>
-                            <td><a href="#" class="td-btn">Записаться</a></td>
-                        </tr>
-                    </table>
+    <main>
+        <section>
+            <div class="container">
+                <div class="headline">
+                    <sh1>Выбрать программу</h1>
                 </div>
-            </section>
+                <table>
+                    <tr>
+                        <th>Спорт</th>
+                        <th>Инстрктор</th>
+                        <th>Дата</th>
+                        <th>Время</th>
+                        <th>Стоимость</th>
+                    </tr>
+                    <tr>
+                        <td>Сноуборд</td>
+                        <td>Константин Константинопольский</td>
+                        <td>30.03.2017</td>
+                        <td>12:00</td>
+                        <td>2000 руб.</td>
+                        <td><a href="#" class="td-btn">Записаться</a></td>
+                    </tr>
+                    <tr>
+                        <td>Сноуборд</td>
+                        <td>Константин Константинопольский</td>
+                        <td>01.04.2017</td>
+                        <td>12:00</td>
+                        <td>2000 руб.</td>
+                        <td><a href="#" class="td-btn">Записаться</a></td>
+                    </tr>
+                    <tr>
+                        <td>Лыжи</td>
+                        <td>Степан Александров</td>
+                        <td>01.04.2017</td>
+                        <td>13:00</td>
+                        <td>3000 руб.</td>
+                        <td><a href="#" class="td-btn">Записаться</a></td>
+                    </tr>
+                    <tr>
+                        <td>Лыжи</td>
+                        <td>Виталий Сергеев</td>
+                        <td>03.04.2017</td>
+                        <td>14:00</td>
+                        <td>4000 руб.</td>
+                        <td><a href="#" class="td-btn">Записаться</a></td>
+                    </tr>
+                    <tr>
+                        <td>Сноуборд</td>
+                        <td>Арсений Петров</td>
+                        <td>04.04.2017</td>
+                        <td>14:00</td>
+                        <td>4000 руб.</td>
+                        <td><a href="#" class="td-btn">Записаться</a></td>
+                    </tr>
+                </table>
+            </div>
+        </section>
 
-            <section>
-                <div class="container">
-                    <div class="advanced-level">
-                        <div class="photo">
-                            <img class="img-instr" src="./img/instr4.jpg">
-                            <p class="konstantin">Константин<br> Константинопольский</p>
+        <section>
+            <div class="container">
+                <div class="advanced-level">
+                    <div class="photo">
+                        <img class="img-instr" src="./img/instr4.jpg">
+                        <p class="konstantin">Константин<br> Константинопольский</p>
+                    </div>
+                    <div class="text">
+                        <div>
+                            <h2>Free ride/ Продвинутый уровень</h2>
+                            <strong>Дата занятия - 30 марта 2017 года.</strong>
                         </div>
-                        <div class="text">
-                            <div>
-                                <h2>Free ride/ Продвинутый уровень</h2>
-                                <strong>Дата занятия - 30 марта 2017 года.</strong>
-                            </div>
-                            <div>
-                                <h3>Абонемент на разовое посещение (3 часа)</h3>
-                                <p>Занятие расчитано на опытных учеников и проходит<br>
-                                вне подготовленной трассы, рядом с горнолыжной трассой<br>
-                                Катание по нетронотуму снего раскрывает все возможности<br>
-                                горных лыж, а опытный инструтор научит контролировать<br>
-                                лыжи на любой поверхности.</p>
-                                <a class="info" href="#">Узнать больше</a>
-                            </div>
-                        </div>
-                        <div class="buy">
-                            <strong class="price">2 000 P</strong>
-                            <a href="#" class="btn">Записаться</a>
+                        <div>
+                            <h3>Абонемент на разовое посещение (3 часа)</h3>
+                            <p>Занятие расчитано на опытных учеников и проходит<br>
+                            вне подготовленной трассы, рядом с горнолыжной трассой<br>
+                            Катание по нетронотуму снего раскрывает все возможности<br>
+                            горных лыж, а опытный инструтор научит контролировать<br>
+                            лыжи на любой поверхности.</p>
+                            <a class="info" href="#">Узнать больше</a>
                         </div>
                     </div>
-                    <div class="links">
-                        <a class="chevron" href="#">
-                            <i class="fas fa-chevron-left"></i>
-                        </a>
-                        <a class="link" href="#">1</a>
-                        <a class="link" href="#">2</a>
-                        <a class="link" href="#">3</a>
-                        <a class="link" href="#">4</a>
-                        <a class="link" href="#">5</a>
-                        <a class="chevron" href="#">
-                            <i class="fas fa-chevron-right"></i>
-                        </a>    
+                    <div class="buy">
+                        <strong class="price">2 000 P</strong>
+                        <a href="#" class="btn">Записаться</a>
                     </div>
                 </div>
-            </section>
-        </main>
+                <div class="links">
+                    <a class="chevron" href="#">
+                        <i class="fas fa-chevron-left"></i>
+                    </a>
+                    <a class="link" href="#">1</a>
+                    <a class="link" href="#">2</a>
+                    <a class="link" href="#">3</a>
+                    <a class="link" href="#">4</a>
+                    <a class="link" href="#">5</a>
+                    <a class="chevron" href="#">
+                        <i class="fas fa-chevron-right"></i>
+                    </a>    
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="container">
+                <div class="headline">
+                    <h2>Заказать обратный звонок</h2>
+                </div>
+            </div>
+        </section>
+
+    </main>
 </body>
 </html>
