--- a/index.html
+++ b/index.html
@@ -155,6 +155,11 @@
                 <div class="headline">
                     <h2>Заказать обратный звонок</h2>
                 </div>
+                <div class="imputs">
+                    <input type="text">
+                    <input type="text">
+                    <input type="number">
+                </div>
             </div>
         </section>
 
