--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <section>
             <div class="container">
                 <div class="headline">
-                    <sh1>Выбрать программу</h1>
+                    <h1>Выбрать программу</h1>
                 </div>
                 <table>
                     <tr>
