--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <section>
             <div class="container">
                 <div class="headline">
-                    <sh1>Выбрать программу</h1>
+                    <h1>Выбрать программу</h1>
                 </div>
                 <table>
                     <tr>
@@ -154,6 +154,14 @@
             <div class="container">
                 <div class="headline">
                     <h2>Заказать обратный звонок</h2>
+                </div>
+                <div class="inputs">
+                    <h3>*Имя</h3>
+                    <input type="text">
+                    <h3>*Фамилия</h3>
+                    <input type="text">
+                    <h3>*Телефон</h3>
+                    <input type="text">
                 </div>
             </div>
         </section>
