--- a/index.html
+++ b/index.html
@@ -156,16 +156,68 @@
                     <h2>Заказать обратный звонок</h2>
                 </div>
                 <div class="inputs">
-                    <h3>*Имя</h3>
-                    <input type="text">
-                    <h3>*Фамилия</h3>
-                    <input type="text">
-                    <h3>*Телефон</h3>
-                    <input type="text">
+                    <div>
+                        <h3 class="data ">*Имя</h3>
+                        <input type="text">
+                    </div>
+                    <div>
+                        <h3 class="data">*Фамилия</h3>
+                        <input type="text">
+                    </div>
+                    <div>
+                        <h3 class="data">*Телефон</h3>
+                        <input type="text">
+                    </div>
+                    <div>
+                        <h3 class="data">Ваше сообщение</h3>
+                        <textarea class="txt" name="comment" cols="70" rows="8"></textarea>
+                    </div>
+                </div>
+                <div class="send">
+                    <a href="#" class="btn">Отправить</a>
                 </div>
             </div>
         </section>
-
     </main>
+    
+    <footer>
+        <div class="container">
+            <div class="footer-main">
+                <strong class="footer-logo">ice ace</strong>
+                <div class="footer-icons">
+                    <i class="fab fa-youtube-square icon"></i>
+                    <i class="fab fa-instagram icon"></i>
+                    <i class="fab fa-facebook-f icon"></i>
+                    <i class="fab fa-vk icon"></i>
+                </div>
+                <div class="footer-contacts">
+                    <a  href="#" class="namber">8 (800) 800-80-80</a>
+                    <a href="#" class="contacts-link">hello@iceace.com</a>
+                </div>
+            </div>
+            <div>
+                <div class="footer">
+                    <strong>2017 "ICE ACE" - школа сноуборда и<br>
+                        горных лыж. Все права защищены</strong>
+                    <div class="footer-menu">
+                        <ul class="footer-list">
+                            <li class="footer-items">
+                                <a class="footer-link" href="../IceAceProject3/index.html">Расписание</a>
+                            </li>
+                            <li class="footer-items">
+                                <a class="footer-link" href="../IceAceProject2/index.html">Инструкторы</a>
+                            </li>
+                            <li class="footer-items">
+                                <a class="footer-link" href="../IceAceProject3/index.html">Стоимость</a>
+                            </li>
+                            <li class="footer-items">
+                                <a class="footer-link" href="#map">Как добраться</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>      
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
