--- a/index.html
+++ b/index.html
@@ -21,29 +21,29 @@
         <div class="container">
             <div class="main-menu">
                 <div class="logo">
-                    <a href="../IceAceProject/index.html">
+                    <a href="https://megacubis.github.io/IceAce/">
                         <img src="./img/logo.png">
                     </a>
                 </div>
                 <nav class="main-nav">
                     <ul class="main-list">
                         <li class="main-items">
-                            <a class="main-link" href="./index.html">Расписание</a>
+                            <a class="main-link" href="https://megacubis.github.io/IceAce3/">Расписание</a>
                         </li>
                         <li class="main-items">
-                            <a class="main-link" href="../IceAceProject2/index.html">Инструкторы</a>
+                            <a class="main-link" href="https://megacubis.github.io/IceAce2/">Инструкторы</a>
                         </li>
                         <li class="main-items">
-                            <a class="main-link" href="./index.html">Стоимость</a>
+                            <a class="main-link" href="https://megacubis.github.io/IceAce3/">Стоимость</a>
                         </li>
                         <li class="main-items">
-                            <a class="main-link" href="../IceAceProject/index.html">Как добраться</a>
+                            <a class="main-link" href="https://megacubis.github.io/IceAce/">Как добраться</a>
                         </li>
                     </ul>
                 </nav>
                 <div class="contacts">
                     <a href="tel:+78008008080" class="contacts-phone">8(800)800-80-80</a>
-                    <a href="../IceAceProject3/index.html" class="btn">Записаться</a>
+                    <a href="https://megacubis.github.io/IceAce3/" class="btn">Записаться</a>
                 </div>
             </div>
         </div>
@@ -202,13 +202,13 @@
                     <div class="footer-menu">
                         <ul class="footer-list">
                             <li class="footer-items">
-                                <a class="footer-link" href="../IceAceProject3/index.html">Расписание</a>
+                                <a class="footer-link" href="https://megacubis.github.io/IceAce3/">Расписание</a>
                             </li>
                             <li class="footer-items">
-                                <a class="footer-link" href="../IceAceProject2/index.html">Инструкторы</a>
+                                <a class="footer-link" href="https://megacubis.github.io/IceAce2/">Инструкторы</a>
                             </li>
                             <li class="footer-items">
-                                <a class="footer-link" href="../IceAceProject3/index.html">Стоимость</a>
+                                <a class="footer-link" href="https://megacubis.github.io/IceAce3/">Стоимость</a>
                             </li>
                             <li class="footer-items">
                                 <a class="footer-link" href="#map">Как добраться</a>
